Service/external-service.yaml
--------------SERVICE------------------------
apiVersion: v1
kind: Service
metadata:
  name: external-postgres
spec:
  type: ExternalName
  externalName: db.example.com
-----------OR ------------------
apiVersion: v1
kind: Service
metadata:
  name: external-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-postgres
subsets:
  - addresses:
      - ip: 172.38.100.68
    ports:
      - port: 5432
----------------SECRET-------------------
apiVersion: v1
kind: Secret
metadata:
  name: pg-credentials
type: Opaque
stringData:
  PGUSER: user1
  PGPASSWORD: mypass
  PGDATABASE: myDbName
-----------------POD-------------------
apiVersion: v1
kind: Pod
metadata:
  name: pg-client
  namespace: default
spec:
  restartPolicy: Never
  containers:
    - name: pg-client
      image: postgres:15
      command: ["sleep", "3600"]
----------------------------------------------------------
kubectl exec -it pg-client -- bash
psql -h "$DB_HOST" -p "$DB_PORT" -U "$DB_USER" -d "$DB_NAME"
